--- a/designs for form/index.html
+++ b/designs for form/index.html
@@ -21,8 +21,8 @@
         <span class="io-s3"></span>
 
         <form action="" class="custom-form">
-            <input class="custom-input" type="text" name="username" id="username" placeholder="username">
-            <input class="custom-input" type="password" name="password" id="password" placeholder="password">
+            <input class="custom-input" type="text" name="username" id="username" placeholder="username" autocomplete="off" spellcheck="false">
+            <input class="custom-input" type="password" name="password" id="password" placeholder="password" autocomplete="off" spellcheck="false">
             <button class="custom-button" id="submit">submit</button>
         </form>
         <span class="check-in"></span>
