--- a/designs for buttons/index.html
+++ b/designs for buttons/index.html
@@ -8,8 +8,15 @@
 </head>
 <body>
 
-    <button class="ripple-button">button</button>
+    <div class="container">
+
+        <button class="ripple-button">button</button>
     
+    
+        <button class="new-button">button</button>
+
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
