new example ... to do list (Tasks ..)

--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -13,12 +13,12 @@
 
         <div style="width: 80%;">
 
-            <div class="box-input-user">
-                <input type="text" class="input-user" name="username" autocomplete="off" spellcheck="false">
-                <button class="add-user"><i class="fas fa-plus"></i></button>
+            <div class="box-input-task">
+                <input type="text" class="input-task" name="username" autocomplete="off" spellcheck="false">
+                <button class="add-task"><i class="fas fa-plus"></i></button>
             </div>
     
-            <div class="users-box">
+            <div class="tasks-box">
                 <!--<div class="user-box"><span class="user-info">salim</span><span class="delete-user">delete</span></div>
                 <div class="user-box"><span class="user-info">salim</span><span class="delete-user">delete</span></div>
                 <div class="user-box"><span class="user-info">salim</span><span class="delete-user">delete</span></div>-->
